# agentkit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-agent.yaml  test-invalid-model.yaml  test-missing-field.yaml  test-tools-parameters.yaml  test-tools-simple.yaml  test-valid.yaml
examples/: bedrock-config.yaml  goose-claude-config.yaml  goose-custom-model.yaml  goose-gpt4-config.yaml
src/agentkit/: __init__.py  __main__.py  cli.py
src/agentkit/core/: __init__.py  config.py  logger.py  model_interface.py  schema.py  tool_executor.py
src/agentkit/models/: __init__.py  bedrock_provider.py  goose_provider.py
src/agentkit/tools/: __init__.py  base.py  builtin.py  registry.py
tests/: __init__.py  test_bedrock_provider.py  test_goose_provider.py  test_model_interface.py  test_schema.py  test_smoke.py  test_tools.py
